# CrossPlatform

./: .gitignore  CMakeLists.txt
include/: Processes.h  ProcessesFactory.h
src/: main.cpp
src/adapters/: SourceAdapter.h  WebcamAdapter.cpp
src/common/: AppContext.h  AppManager.cpp  FilesImpl.h  Processes.cpp  ProcessesImpl.h
src/ui/: MainFrame.cpp  MainFrame.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h
